--- a/index.html
+++ b/index.html
@@ -15,10 +15,94 @@
             <div class="title">
                 <h4>devfinder</h4>
             </div>
-            <div class="light-mode">
-                <button>LIGHT<i class="fas fa-sun sun-icon"></i></button>
+            <div class="brightness-mode">
+                <button class="dark-mode">LIGHT<i class="fas fa-sun sun-icon"></i></button>
+                <button class="light-mode">LIGHT<i class="fas fa-moon moon-icon"></i></button>
             </div>
         </header>
+
+        <form id="search-users" autocomplete="off">
+            <div class="form-group">
+                <input type="text" class="form-control" id="search" placeholder="Search GitHub Username...">
+                <button class="btn btn-primary btn-block search-btn">
+                    Search
+                </button>
+                <i class="fas fa-search search-icon fa-lg"></i>
+            </div>
+        </form>
+
+        <div class="user-information">
+            <div class="row">
+                <div class="col-md-3">
+                    <img class="github-user-image" height="100px" width="100px" src="images/default-github-image.png">
+                </div>
+                <div class="col-md-6">
+                    <h3 class="fullname">Default Fullname</h1>
+                    <p class="handle">@Handle</p>
+                    <p class="bio">Default Bio</p>
+                </div>
+                <div class="col-md-3">
+                    <p class="joined-date">Joined 07 Jan 2022</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-9 offset-md-3 github-statistics">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <p class="text-heading">
+                                Repos
+                            </p>
+                            <p class="text-result repo-result">
+                                0
+                            </p>
+                        </div>
+                        <div class="col-md-4">
+                            <p class="text-heading">
+                                Followers
+                            </p>
+                            <p class="text-result followers-result">
+                                0
+                            </p>
+                        </div>
+                        <div class="col-md-4">
+                            <p class="text-heading">
+                                Following
+                            </p>
+                            <p class="text-result following-result">
+                                0
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-9 offset-md-3 github-information">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="location">
+                                <i class="fas fa-map-marker-alt icon"></i>
+                                <span class="user-location">Location</span>
+                            </div>
+                            <div class="blog">
+                                <i class="fas fa-link icon"></i>
+                                <span class="user-blog">Blog</span>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="twitter">
+                                <i class="fab fa-twitter icon"></i>
+                                <span class="user-twitter">Twitter</span>
+                            </div>
+                            <div class="github">
+                                <i class="fab fa-github icon"></i>
+                                <span class="user-github">Github</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     
 
