--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <img class="github-user-image" height="100px" width="100px" src="images/default-github-image.png">
                 </div>
                 <div class="col-md-6">
-                    <h3 class="fullname">Default Fullname</h1>
+                    <h3 class="fullname">Fullname</h1>
                     <p class="handle">@Handle</p>
                     <p class="bio">Default Bio</p>
                 </div>
@@ -82,22 +82,22 @@
                         <div class="col-md-6">
                             <div class="location">
                                 <i class="fas fa-map-marker-alt icon"></i>
-                                <span class="user-location">Location</span>
+                                <span class="user-location">Not Available</span>
                             </div>
                             <div class="blog">
                                 <i class="fas fa-link icon"></i>
-                                <span class="user-blog">Blog</span>
+                                <span class="user-blog">Not Available</span>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="twitter">
                                 <i class="fab fa-twitter icon"></i>
-                                <span class="user-twitter">Twitter</span>
+                                <span class="user-twitter">Not Available</span>
                             </div>
-                            <div class="github">
+                            <!-- <div class="github">
                                 <i class="fab fa-github icon"></i>
                                 <span class="user-github">Github</span>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -109,7 +109,59 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>  
-<script src="dist/js/index.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.0/moment.min.js"></script>
+
+<script type="text/javascript">
+    $(document).ready(function() {
+        $( "#search-users" ).submit(function(e) {
+          e.preventDefault();
+          var username = $('#search').val();
+          var usernameNoSpaces = username.split(' ').join('');
+
+          $.ajax({
+            url: 'https://api.github.com/users/' + usernameNoSpaces,
+            type: "GET",
+            dataType: "JSON",
+            success: function (data) {
+                if (data){
+                    // console.log(data);
+                    $('.github-user-image').attr('src',data.avatar_url);
+                    $('.fullname').html(data.name);
+                    $('.handle').html('@' + data.login);
+                    $('.bio').html(data.bio);
+                    $('.repo-result').html(data.public_repos);
+                    $('.followers-result').html(data.followers);
+                    $('.following-result').html(data.following);
+
+                    if (data.location) {
+                        $('.user-location').html(data.location);
+                    } else {
+                        $('.user-location').html('Not Available');
+                    }
+
+                    if (data.blog) {
+                        $('.user-blog').html(data.blog);
+                    } else {
+                        $('.user-blog').html('Not Available');
+                    }
+
+                    if (data.twitter_username){
+                        $('.user-twitter').html(twitter_username);
+                    } else {
+                        $('.user-twitter').html('Not Available');
+                    }
+
+                    // created at
+                    var created_at = new Date(data.created_at);
+                    var created_at_formatted = moment(created_at).format('D MMM Y');
+                    $('.joined-date').html('Joined ' + created_at_formatted);
+                }
+            }
+            });
+
+        });
+    });
+  </script>
 
 </body>
 </html>
