mobile design complete

--- a/index.html
+++ b/index.html
@@ -33,22 +33,24 @@
 
         <div class="user-information">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 col-2">
                     <img class="github-user-image" height="100px" width="100px" src="images/default-github-image.png">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 offset-sm-0 offset-4 col-6">
                     <h3 class="fullname">Fullname</h1>
                     <p class="handle">@Handle</p>
-                    <p class="bio">Default Bio</p>
+                    <p class="bio desktop">Default Bio</p>
+                    <p class="joined-date mobile">Joined 07 Jan 2022</p>
                 </div>
                 <div class="col-md-3">
-                    <p class="joined-date">Joined 07 Jan 2022</p>
+                    <p class="joined-date desktop">Joined 07 Jan 2022</p>
+                    <p class="bio mobile">Default Bio</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-9 offset-md-3 github-statistics">
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-4">
                             <p class="text-heading">
                                 Repos
                             </p>
@@ -56,7 +58,7 @@
                                 0
                             </p>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-4">
                             <p class="text-heading">
                                 Followers
                             </p>
@@ -64,7 +66,7 @@
                                 0
                             </p>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-4">
                             <p class="text-heading">
                                 Following
                             </p>
